# navtools

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  navtools-config.cmake.in
examples/: test_attitude.cpp  test_frames.cpp
include/navtools/: attitude.hpp  binary-ops.hpp  binary_ops.hpp  constants.hpp  earth_info.hpp  frames.hpp  math.hpp  models.hpp  rotations.hpp  types.hpp  typing.hpp
